# FunHub-app-launcher-

./: .gitignore  .gitmodules
fractals pakcage/: fractals.cpp  fractals.py
fractals pakcage/cpp/: fractals.cpp
fractals pakcage/cpp/builds/windows/CLI/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FractalApp.sln  FractalApp.vcxproj  FractalApp.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
fractals pakcage/cpp/builds/windows/CLI/FractalApp.dir/Debug/: FractalApp.exe.recipe
fractals pakcage/cpp/builds/windows/CLI/FractalApp.dir/Debug/FractalApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FractalApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
fractals pakcage/cpp/builds/windows/CLI/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
fractals pakcage/cpp/builds/windows/CLI/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
fractals pakcage/cpp/builds/windows/CLI/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
fractals pakcage/cpp/scripts/CLI/: fractals.cpp
fractals pakcage/cpp/scripts/GUI/: CMakeLists.txt  fractals.cpp
funhub package/: README.md  menu.py  setup.py
minesweeper package/: README.md  minesweeper.py  setup.py
snake package/: README.md  setup.py  snake.py
tic-tac-toe package/: README.md  setup.py  tic-tac-toe.py
